--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Pens</title>
+    <title>Premier League</title>
 </head>
 <body>
-    <h1><img src="/images/icon.png" width="60px"/> Pens <img src="/images/icon.png" width="60px"/></h1>
+    <img src="/images/logo.png" alt="Premier League Logo" class="image_resize">
  
     <a href="index2.html" class = "nextpage"> Next page</a>
     
