--- a/gittester.html
+++ b/gittester.html
@@ -10,5 +10,6 @@
     <h1>Git Test Page</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis labore, molestiae maxime delectus nostrum blanditiis inventore nihil dolor dicta architecto, deleniti dolores deserunt atque eligendi quaerat cum? Officia, ipsa alias.</p>
     <h3>This is a really awesome change</h3>
+    <h2>Changed</h2>
 </body>
 </html>
