--- a/index.html
+++ b/index.html
@@ -8,56 +8,64 @@
     <title>Premier League</title>
 </head>
 <body>
-    <img src="/images/logo.png" alt="Premier League Logo" class="image_resize">
- 
+    <img src="/images/logo.png" alt="Premier League Logo" id="premlogo">
+    <div class="pagebackground">
+         <h2>Top Premier League Players</h2>
+
+         <div class="container">
+            <div class="card">
+                <h3>Alan Shearer</h2>
+                <img src="/images/shearer.jpeg" alt="Alan Shearer" class="image_resize">
+                
+                <details>
+                    <summary>Stats:</summary>
+                    <ul>
+                        <li>Appearances: 441</li>
+                        <li>Goals: 260</li>
+                        <li>Assists: 64</li>
+                    </ul>
+                </details>
+            </div>
+
+            <div class="card">
+                <h3>Thierry Henry</h2>
+                <img src="/images/henry.jpeg" alt="Thierry Henry" class="image_resize">
+                <details>
+                    <summary>Stats:</summary>
+                    <ul>
+                        <li>Appearances: 258</li>
+                        <li>Goals: 175</li>
+                        <li>Assists: 74</li>
+                    </ul>
+                </details>
+            </div>
+
+            <div class="card">
+                <h3>Cristiano Ronaldo</h2>
+                <img src="/images/ronaldo.jpeg" alt="Cristiano Ronaldo" class="image_resize">
+                <details>
+                    <summary>Stats:</summary>
+                        <p>Appearances: 235</p>
+                        <p>Goals: 103</p>
+                        <p>Assists: 37</p>
+                </details>
+            </div>
+
+            <div class="card">
+                <h3>Frank Lampard</h2>
+                <img src="/images/lampard.jpeg" alt="Frank Lampard" class="image_resize">
+                <details>
+                    <summary>Stats:</summary>
+                        <p>Appearances: 609</p>
+                        <p>Goals: 177</p>
+                        <p>Assists: 102</p>
+                </details>
+            </div>
+         </div>
+
+    </div>
+
     <a href="index2.html" class = "nextpage"> Next page</a>
-    
-    <h2>The inventor of the pen: Petrache Poenaru</h2>
-    <a href="https://en.wikipedia.org/wiki/Petrache_Poenaru"><img src="/images/themainman.jpeg" alt="The inventor" class="center"></a>
-    <p> Petrache Poenaru was a Romanian inventor of the Enlightenment era.</p>
-    <p> Poenaru, who had studied in Paris and Vienna and, later, completed his specialized studies in England, was a mathematician, physicist, engineer, inventor, teacher and organizer of the educational system, as well as a politician, agronomist, and zootechnologist, founder of the Philharmonic Society, the Botanical Gardens and the National Museum of Antiquities in Bucharest.
-        While a student in Paris, Petrache Poenaru invented the world's first fountain pen, an invention for which the French Government issued a patent on 25 May 1827</p>
-    <h2>A bit of a history lesson on pens:</h2>
-    <p>Ancient Egyptians had developed writing on papyrus scrolls when scribes used thin reed brushes or reed pens from the Juncus maritimus or sea rush.[15] In his book A History of Writing, Steven Roger Fischer suggests, on the basis of finds at Saqqara, that the reed pen might well have been used for writing on parchment as long ago as the First Dynasty, or around 3000 BC. Reed pens continued to be used until the Middle Ages, but were slowly replaced by quills from about the 7th century. The reed pen, made from reed or bamboo, is still used in some parts of Pakistan by young students and is used to write on small wooden boards.
-        The reed pen survived until papyrus was replaced as a writing surface by animal skins, vellum and parchment. The smoother surface of skin allowed finer, smaller writing with a quill pen, derived from the flight feather.[17] The quill pen was used in Qumran, Judea to write some of the Dead Sea Scrolls, which date back to around 100 BC. The scrolls were written in Hebrew dialects with bird feathers or quills. There is a specific reference to quills in the writings of St. Isidore of Seville in the 7th century.[18] Quill pens were still widely used in the eighteenth century, and were used to write and sign the Constitution of the United States in 1787.
-        A copper nib was found in the ruins of Pompeii, showing that metal nibs were used in the year 79. There is also a reference to 'a silver pen to carry ink in', in Samuel Pepys' diary for August 1663.[20] 'New invented' metal pens are advertised in The Times in 1792.[21][full citation needed] A metal pen point was patented in 1803, but the patent was not commercially exploited. A patent for the manufacture of metal pens was advertised for sale by Bryan Donkin in 1811.[22][full citation needed] John Mitchell of Birmingham started to mass-produce pens with metal nibs in 1822, and after that, the quality of steel nibs improved enough so that dip pens with metal nibs came into general use.[23][full citation needed]
-        The earliest historical record of a pen with a reservoir dates back to the 10th century AD. In 953, Ma'ād al-Mu'izz, the Fatimid Caliph of Egypt, demanded a pen which would not stain his hands or clothes, and was provided with a pen which held ink in a reservoir and delivered it to the nib.[24] This pen may have been a fountain pen, but its mechanism remains unknown, and only one record mentioning it has been found. A later reservoir pen was developed in 1636. In his Deliciae Physico-Mathematicae (1636), German inventor Daniel Schwenter described a pen made from two quills. One quill served as a reservoir for ink inside the other quill. The ink was sealed inside the quill with cork. Ink was squeezed through a small hole to the writing point. In 1809, Bartholomew Folsch received a patent in England for a pen with an ink reservoir.[24]
-        A student in Paris, Romanian Petrache Poenaru invented a fountain pen that used a quill as an ink reservoir. The French Government patented this in May 1827.[25] Fountain pen patents and production then increased in the 1850s.
-        The first patent on a ballpoint pen was issued on October 30, 1888, to John J Loud. In 1938, László Bíró, a Hungarian newspaper editor, with the help of his brother George, a chemist, began to design new types of pens, including one with a tiny ball in its tip that was free to turn in a socket. As the pen moved along the paper, the ball rotated, picking up ink from the ink cartridge and leaving it on the paper. Bíró filed a British patent on June 15, 1938. In 1940, the Bíró brothers and a friend, Juan Jorge Meyne, moved to Argentina, fleeing Nazi Germany. On June 17, 1943 they filed for another patent.[27] They formed "Bíró Pens of Argentina", and by the summer of 1943, the first commercial models were available.[28] Erasable ballpoint pens were introduced by Paper Mate in 1979, when the Erasermate was put on the market.
-        Slavoljub Eduard Penkala, a naturalized Croatian engineer and inventor of Polish-Dutch origin from the Kingdom of Croatia-Slavonia in Austria-Hungary, became renowned for further development of the mechanical pencil (1906) – then called an "automatic pencil" – and the first solid-ink fountain pen (1907). Collaborating with an entrepreneur by the name of Edmund Moster, he started the Penkala-Moster Company and built a pen-and-pencil factory that was one of the biggest in the world at the time. This company, now called TOZ-Penkala, still exists today. "TOZ" stands for "Tvornica olovaka Zagreb", meaning "Zagreb Pencil Factory".
-        In the 1960s, the fiber- or felt-tipped pen was invented by Yukio Horie of the Tokyo Stationery Company, Japan. Paper Mate's Flair was among the first felt-tip pens to hit the U.S. market in the 1960s, and it has been the leader ever since. Marker pens and highlighters, both similar to felt pens, have become popular in recent times.
-        Rollerball pens were introduced in the early 1970s. They use a mobile ball and liquid ink to produce a smoother line. Technological advances during the late 1980s and early 1990s have improved the roller ball's overall performance. A porous point pen contains a point made of some porous material such as felt or ceramic. A high quality drafting pen will usually have a ceramic tip, since this wears well and does not broaden when pressure is applied while writing.
-        Although the invention of the typewriter and personal computer with the keyboard input method has offered another way to write, the pen is still the main means of writing.[30] Many people like to use expensive types and brands of pens, including fountain pens, and these are sometimes regarded as a status symbol.[31]</p>
-    <p></p>
-    <p></p>
-    <details>
-        <summary>Here are some cool pens:</summary>
-        <table>
-                <tr>
-                    <th>this one is pretty normal..</th>
-                    <th>this one has a rubber grip!!!</th>
-                    <th>a pen with a touch of class</th>
-                </tr>
-                <tr>
-                    <td><img src="/images/pen1.png" alt="Pens 1" class = "image_resize"></td>
-                    <td><img src="/images/pen2.jpg" alt="Pens 2" class = "image_resize"></td>
-                    <td><img src="/images/pen3.webp" alt="Pens 3" class = "image_resize"></td>            
-                </tr>
-                <tr>
-                    <th>one for the artists</th>
-                    <th>the father of the apple pen</th>
-                    <th>the original</th>
-                </tr>
-                <tr>
-                    <td><img src="/images/brushpen.jpeg" alt="brushpen" class = "image_resize"></td>
-                    <td><img src="/images/stylus.jpeg" alt="stylus" class = "image_resize"></td>
-                    <td><img src="/images/quill.jpeg" alt="quill" class = "image_resize"></td>            
-                </tr>
-            </table>
-    </details>
-    <p></p>
-    <p></p>
-    <p></p>
 
 </body>
 </html>
