added navigation bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
     <img src="/images/logo.png" alt="Premier League Logo" id="premlogo">
+
+    <p></p>
+    <nav>
+        <a href="">Home</a>
+        <a href="" style="font-weight:bold">Players</a>
+        <a href="">Teams</a>
+        <a href="">About Us</a>
+    </nav>
+
     <div class="pagebackground">
          <h2>Top Premier League Players</h2>
 
@@ -19,11 +28,9 @@
                 
                 <details>
                     <summary>Stats:</summary>
-                    <ul>
-                        <li>Appearances: 441</li>
-                        <li>Goals: 260</li>
-                        <li>Assists: 64</li>
-                    </ul>
+                        <p>Appearances: 441</p>
+                        <p>Goals: 260</p>
+                        <p>Assists: 64</p>
                 </details>
             </div>
 
@@ -32,11 +39,9 @@
                 <img src="/images/henry.jpeg" alt="Thierry Henry" class="image_resize">
                 <details>
                     <summary>Stats:</summary>
-                    <ul>
-                        <li>Appearances: 258</li>
-                        <li>Goals: 175</li>
-                        <li>Assists: 74</li>
-                    </ul>
+                        <p>Appearances: 258</p>
+                        <p>Goals: 175</p>
+                        <p>Assists: 74</p>
                 </details>
             </div>
 
@@ -63,6 +68,52 @@
             </div>
          </div>
 
+         <div class="container">
+            <div class="card">
+                <h3>Alan Shearer</h2>
+                <img src="/images/shearer.jpeg" alt="Alan Shearer" class="image_resize">
+                
+                <details>
+                    <summary>Stats:</summary>
+                        <p>Appearances: 441</p>
+                        <p>Goals: 260</p>
+                        <p>Assists: 64</p>
+                </details>
+            </div>
+
+            <div class="card">
+                <h3>Thierry Henry</h2>
+                <img src="/images/henry.jpeg" alt="Thierry Henry" class="image_resize">
+                <details>
+                    <summary>Stats:</summary>
+                        <p>Appearances: 258</p>
+                        <p>Goals: 175</p>
+                        <p>Assists: 74</p>
+                </details>
+            </div>
+
+            <div class="card">
+                <h3>Cristiano Ronaldo</h2>
+                <img src="/images/ronaldo.jpeg" alt="Cristiano Ronaldo" class="image_resize">
+                <details>
+                    <summary>Stats:</summary>
+                        <p>Appearances: 235</p>
+                        <p>Goals: 103</p>
+                        <p>Assists: 37</p>
+                </details>
+            </div>
+
+            <div class="card">
+                <h3>Frank Lampard</h2>
+                <img src="/images/lampard.jpeg" alt="Frank Lampard" class="image_resize">
+                <details>
+                    <summary>Stats:</summary>
+                        <p>Appearances: 609</p>
+                        <p>Goals: 177</p>
+                        <p>Assists: 102</p>
+                </details>
+            </div>
+         </div>
     </div>
 
     <a href="index2.html" class = "nextpage"> Next page</a>
