--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <a class="px-3" href="" style="font-weight:bold">Players</a>
 
         <div class="dropdown">
-            <a class="p-3" href="">Teams</a>
+            <a class="px-3" href="teams.html">Teams</a>
             <div class="dropdown_content">
                 <a href="#">Arsenal FC</a>
-                <a href="#">Chelsea FC</a>
+                <a href="chelsea.html">Chelsea FC</a>
                 <a href="#">Liverpool FC</a>
                 <a href="#">Manchester City FC</a>
                 <a href="#">Manchester United FC</a>
