--- a/chelsea.html
+++ b/chelsea.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Premier League</title>
 </head>
-<body class="bg-image text-white" style="background-image: url(images/background.jpeg); height: 100vh">
+<body class="bg-image text-white" style="background-image: url(images/background.jpeg); background-size: 100% 100%;">
     <img src="/images/logo.png" alt="Premier League Logo" id="premlogo">
 
     <p></p>
