--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Premier League</title>
 </head>
-<body class="bg-image text-white" style="background-image: url(images/background.jpeg); height: 100vh">
+<body class="text-white" style="background-image: url(images/background.jpeg); background-size: 100% 100%;">
     <img src="/images/logo.png" alt="Premier League Logo" id="premlogo">
 
     <p></p>
@@ -93,7 +93,7 @@
                 <div class="col-sm d-flex cols-xs-1 cols-s-1 cols-md-2 cols-lg-3 justify-content-end">
                     <div class="card text-center shadow-lg">
                         <div class="card-body text-center">
-                            <h4 class="card-header bg-primary">Frank Lampard</h4>
+                            <h5 class="card-header bg-primary">Frank Lampard</h5>
                                 <img style="width:150px; height:150px" src="/images/lampard.jpeg" alt="Frank Lampard" class="card-img-top img-thumbnail">
                         
                                 <details class="card-text text-dark">
