--- a/teams.html
+++ b/teams.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Premier League</title>
 </head>
-<body class="bg-image text-white" style="background-image: url(images/background.jpeg); height: 100vh">
+<body class="bg-image text-white" style="background-image: url(images/background.jpeg); background-size: 100% 100%;">
     <img src="/images/logo.png" alt="Premier League Logo" id="premlogo">
 
     <p></p>
@@ -36,7 +36,7 @@
     <p></p>
     <p></p>
 
-    <h1 class="text-center bg-dark py-3 d-flex justify-content-center">The Top 6</h1>
+    <h1 class="text-center bg-dark py-3 d-flex justify-content-center" style="width:500px; margin-left:auto; margin-right:auto; margin-top:20px">The Top 6</h1>
 
     <div class="container">
         <div class="row px-5 py-2">
