added homepage and liverpool page

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     </section>
 
     <nav class="navbar-default justify-content-between text-center" style="background-color:rgb(139,0,139); font-size: 25px;">
-        <a class="px-3" href="">Home</a>
+        <a class="px-3" href="home.html">Home</a>
         <a class="px-3" href="" style="font-weight:bold">Players</a>
 
         <div class="dropdown">
             <a class="px-3" href="teams.html">Teams</a>
             <div class="dropdown_content">
-                <a href="#">Arsenal FC</a>
+                <a href="arsenal.html">Arsenal FC</a>
                 <a href="chelsea.html">Chelsea FC</a>
                 <a href="#">Liverpool FC</a>
                 <a href="#">Manchester City FC</a>
@@ -36,7 +36,7 @@
 
     </nav>
     <div>
-         <h1>Top Premier League Players</h1>
+         <h1 class="headerbg">Top Premier League Players</h1>
         
          <div class="container">
 
@@ -142,6 +142,17 @@
          </div>
         </div>
     </div>
+
+    <footer> 
+        
+        <nav class="navbar-default justify-content-between text-center" style="background-color:rgb(139,0,139); font-size: 25px;">
+            <a class="px-3" href="home.html">Home</a>
+            <a class="px-3" href="index.html">Players</a>
+            <a class="px-3" href="teams.html">Teams</a>
+            <a class="px-3" href="">Help</a>
+
+        <img src="images/logo.png" alt="logo" style="position:absolute; width:4%; height:4%; right:0">
+    </footer>
 
 </body>
 </html>
