--- a/teams.html
+++ b/teams.html
@@ -19,15 +19,15 @@
     </section>
 
     <nav class="navbar-default justify-content-between text-center" style="background-color:rgb(139,0,139); font-size: 25px;">
-        <a class="px-3" href="">Home</a>
+        <a class="px-3" href="home.html">Home</a>
         <a class="px-3" href="index.html" >Players</a>
 
         <div class="dropdown">
             <a class="px-3" style="font-weight:bold" href="teams.html">Teams</a>
             <div class="dropdown_content">
-                <a href="#">Arsenal FC</a>
+                <a href="arsenal.html">Arsenal FC</a>
                 <a href="chelsea.html">Chelsea FC</a>
-                <a href="#">Liverpool FC</a>
+                <a href="liverpool.html">Liverpool FC</a>
                 <a href="#">Manchester City FC</a>
                 <a href="#">Manchester United FC</a>
                 <a href="#">Tottenham Hotspur FC</a>
@@ -38,13 +38,13 @@
 
     </nav>
     
-    <h1>The Top 6</h1>
+    <h1 class="headerbg">The Top 6</h1>
 
     <div class="container">
         <div class="row px-5 py-2">
             <div class="card shadow-lg d-block" style="background-image: url(/images/emirates.jpg); background-size: cover; position: relative;  height: 200px;">
                 <img class="p-3" src="images/arsenal.png" alt="arsenal" style="width:25%">
-            <h1 class="d-inline" style="text-decoration:none;">Arsenal FC</h1>
+            <h1 class="headerbg d-inline" style="text-decoration:none;">Arsenal FC</h1>
             <h3 class="stadiums_text d-flex" style="float:right;"><i class="bi bi-house px-2"></i>Emirates Stadium</h3>
             <h3 class="stadiums_text d-flex" style="position:absolute; bottom:0; right:10px">Official Website: <a class="text-primary h3" href="https://www.arsenal.com"> www.arsenal.com</a></h3>
             </div>
@@ -53,43 +53,43 @@
         <div class="row px-5 py-2">
             <div class="card shadow-lg d-block" style="background-image: url(/images/stamfordbridge.jpg); background-size: cover; position: relative;  height: 200px;">
                 <img class="p-3" src="images/chelsea.png" alt="Chelsea" style="width:25%">
-            <h1 class="d-inline" style="text-decoration:none;">Chelsea FC</h1>
+            <h1 class="headerbg d-inline" style="text-decoration:none;">Chelsea FC</h1>
             <h3 class="stadiums_text d-flex" style="float:right;"><i class="bi bi-house px-2"></i>Stamford Bridge</h3>
             <h3 class="stadiums_text d-flex" style="position:absolute; bottom:0; right:10px">Official Website: <a class="text-primary h3" href="https://www.chelseafc.com"> www.chelseafc.com</a></h3>
             </div>
         </div>
 
         <div class="row px-5 py-2">
-            <div class="card shadow-lg d-block" style="background-image: url(/images/anfield.jpg); background-size: cover;  height: 200px;">
+            <div class="card shadow-lg d-block" style="background-image: url(/images/anfield.jpg); background-size: cover;  position: relative; height: 200px;">
                 <img class="p-3" src="images/liverpool.png" alt="Liverpool" style="width:25%">
-            <h1 class="d-inline" style="text-decoration:none;">Liverpool FC</h1>
+            <h1 class="headerbg d-inline" style="text-decoration:none;">Liverpool FC</h1>
             <h3 class="stadiums_text d-flex" style="float:right;"><i class="bi bi-house px-2"></i>Anfield</h3>
             <h3 class="stadiums_text d-flex" style="position:absolute; bottom:0; right:10px">Official Website: <a class="text-primary h3" href="https://www.liverpoolfc.com"> www.liverpoolfc.com</a></h3>
             </div>
         </div>
 
         <div class="row px-5 py-2">
-            <div class="card shadow-lg d-block" style="background-image: url(/images/etihad.png); background-size: cover;  height: 200px;">
+            <div class="card shadow-lg d-block" style="background-image: url(/images/etihad.png); background-size: cover; position: relative; height: 200px;">
                 <img class="p-3" src="images/city.png" alt="city" style="width:25%">
-            <h1 class="d-inline" style="text-decoration:none;">Manchester City FC</h1>
+            <h1 class="headerbg d-inline" style="text-decoration:none;">Manchester City FC</h1>
             <h3 class="stadiums_text d-flex" style="float:right;"><i class="bi bi-house px-2"></i>Etihad</h3>
             <h3 class="stadiums_text d-flex" style="position:absolute; bottom:0; right:10px">Official Website: <a class="text-primary h3" href="https://www.mancity.com"> www.mancity.com</a></h3>
             </div>
         </div>
 
         <div class="row px-5 py-2">
-            <div class="card shadow-lg d-block" style="background-image: url(/images/oldtrafford.jpg); background-size: cover;  height: 200px;">
+            <div class="card shadow-lg d-block" style="background-image: url(/images/oldtrafford.jpg); background-size: cover; position: relative;  height: 200px;">
                 <img class="p-3" src="images/united.png" alt="united" style="width:25%">
-            <h1 class="d-inline" style="text-decoration:none;">Manchester United FC</h1>
+            <h1 class="headerbg d-inline" style="text-decoration:none;">Manchester United FC</h1>
             <h3 class="stadiums_text d-flex" style="float:right;"><i class="bi bi-house px-2"></i>Old Trafford</h3>
             <h3 class="stadiums_text d-flex" style="position:absolute; bottom:0; right:10px">Official Website: <a class="text-primary h3" href="https://www.manutd.com"> www.manutd.com</a></h3>
             </div>
         </div>
 
         <div class="row px-5 py-2">
-            <div class="card shadow-lg d-block" style="background-image: url(/images/tottenhamstadium.jpg); background-size: cover;  height: 200px;">
+            <div class="card shadow-lg d-block" style="background-image: url(/images/tottenhamstadium.jpg); background-size: cover; position: relative; height: 200px;">
                 <img class="p-3" src="images/spurs.png" alt="spurs_stadium" style="width:25%">
-            <h1 class="d-inline" style="text-decoration:none;">Tottenham Hotspur FC</h1>
+            <h1 class="headerbg d-inline" style="text-decoration:none;">Tottenham Hotspur FC</h1>
             <h3 class="stadiums_text d-flex" style="position:absolute; top: 0; right:10px"><i class="bi bi-house px-2"></i>Tottenham Hotspur Stadium</h3>
             <h3 class="stadiums_text d-flex" style="position:absolute; bottom:0; right:10px">Official Website: <a class="text-primary h3" href="https://www.thfc.com"> www.thfc.com</a></h3>
             </div>
@@ -97,5 +97,15 @@
 
     </div>
 
+    <footer> 
+        
+        <nav class="navbar-default justify-content-between text-center" style="background-color:rgb(139,0,139); font-size: 25px;">
+            <a class="px-3" href="home.html">Home</a>
+            <a class="px-3" href="index.html">Players</a>
+            <a class="px-3" href="teams.html">Teams</a>
+            <a class="px-3" href="">Help</a>
+
+        <img src="images/logo.png" alt="logo" style="position:absolute; width:4%; height:4%; right:0">
+    </footer>
 </body>
 </html>
