--- a/liverpool.html
+++ b/liverpool.html
@@ -35,18 +35,16 @@
         <a class="px-3" href="">Help</a>
 
     </nav>
-    <div class="p-1" style="background-image: url(/images/stamfordbridge.jpg); background-size: cover">
-         <h1 class="clubheader d-inline"><img src="images/chelsea.png" alt="Chelsea" style="width: 20%; height: 15%" >Chelsea FC</h1>
+    <div class="p-1" style="background-image: url(/images/anfield.jpg); background-size: cover">
+         <h1 class="clubheader d-inline"><img src="images/liverpool.png" alt="liverpool" style="width: 20%; height: 15%" >Liverpool FC</h1>
 
 
-        <h1 class="headerbg d-flex" style="float:right; text-decoration: none;">Stamford Bridge</h1>
+        <h1 class="headerbg d-flex" style="float:right; text-decoration: none;">Anfield</h1>
 
-
-         
 
          <div class="container d-inline">
             <h1 class="headerbg">About</h1>
-            <p class="text_bg" style="font-size:20px">Across nine chapters, the story of the Blues (or the Pensioners as the team was originally nicknamed) is revealed in words, images and videos - from the dreams of the founders realised in the best stadium in the land, to drawing big crowds with big stars, to modernising the club and winning trophies before a financial collapse and memorable recovery, and then the upward path to the current era.</p>
+            <p class="text_bg" style="font-size:20px">Liverpool Football Club is a professional football club based in Liverpool, England. The club competes in the Premier League, the top tier of English football. Founded in 1892, the club joined the Football League the following year and has played its home games at Anfield since its formation. Domestically, the club has won nineteen League titles, eight FA Cups, a record nine League Cups and sixteen FA Community Shields. In international competitions, the club has won six European Cups, three UEFA Cups, four UEFA Super Cups—all English records—and one FIFA Club World Cup. The club established itself as a major force in domestic and European football in the 1970s and 1980s, when Bill Shankly, Bob Paisley, Joe Fagan and Kenny Dalglish, led the club to a combined eleven League titles and four European Cups. Liverpool won two further European Cups in 2005 and 2019 under the management of Rafael Benítez and Jürgen Klopp, respectively; the latter led Liverpool to a nineteenth League title in 2020, the club's first during the Premier League era.</p>
         </div>
     </div>
 
@@ -54,7 +52,7 @@
         <div class="row d-flex">
             
             <div class="col-4 py-4 justify-content-start">
-                <a class="btn btn-primary btn-lg" style="max-height:100%; width: 100%; margin-right: 300px" href="https://www.chelseafc.com" role="button">Visit the official Chelsea FC Website</a>
+                <a class="btn btn-danger btn-lg" style="max-height:100%; width: 100%; margin-right: 300px" href="https://www.liverpoolfc.com" role="button">Visit the official Liverpool FC Website</a>
 
                 <div class="col p-3">
                     <div class="row">
@@ -62,7 +60,7 @@
                             <div class="card text-center shadow-lg">
                                 <div class="card-body text-center">
                                     <h3 class="card-header bg-dark">Home Kit</h2>
-                                    <img src="images/chelseahomekit.webp" alt="Chelsea Home Kit" style="width:50%; height: 50%">
+                                    <img src="images/liverpoolhomekit.webp" alt="Liverpool Home Kit" style="width:50%; height: 50%">
                                 </div>
                             </div>
                         </div>
@@ -71,7 +69,7 @@
                             <div class="card text-center shadow-lg">
                                 <div class="card-body text-center">
                                     <h3 class="card-header bg-dark">Away Kit</h2>
-                                    <img src="images/chelseaawaykit.webp" alt="Chelsea Away Kit" style="width:50%; height: 50%">
+                                    <img src="images/liverpoolawaykit.jpg" alt="Liverpool Away Kit" style="width:50%; height: 50%">
                                 </div>
                             </div>
                         </div>
@@ -81,9 +79,9 @@
                 <div class="col p-3">
                     <div class="card text-center shadow-lg">
                         <div class="card-body text-center">
-                            <h4 class="card-header bg-primary">Head Coach: </h4>
-                                <img style="width:50%; height:50%" src="/images/grahampotter.webp" alt="Henry" class="card-img-top p-3" style="border: solid black;">
-                            <h4 class="card-footer bg-dark">Graham Potter</h4>
+                            <h4 class="card-header bg-danger">Manager </h4>
+                                <img style="width:50%; height:50%" src="/images/klopp.png" alt="klopp" class="card-img-top p-3" style="border: solid black;">
+                            <h4 class="card-footer bg-dark">Jurgen Klopp</h4>
                         </div>
                     </div>
                 </div>
@@ -91,7 +89,7 @@
 
             <div class="col-8 p-4 justify-content-end">
                         <h1 class="headerbg text_bg p-3">Players</h2>
-                        <table class="table bg-primary text-white table-hover table-responsive table-sm">
+                        <table class="table bg-danger text-white table-hover table-responsive table-sm">
                             <thead>
                                 <th scope="col">Shirt No.</th>
                                 <th scope="col" class="text-center">Player Name</th>
@@ -100,23 +98,23 @@
                             <tbody class="bg-white text-dark">
                                 <tr>
                                     <th scope="row" class="h1 text-center align-middle">1</th>
-                                    <td class="text-center h2"><img src="images/kepa.png" alt="kepa" style=" width: 10%; height: 10%">Kepa Arrizabalaga</td>
+                                    <td class="text-center h2"><img src="images/alisson.jpg" alt="alisson" style=" width: 10%; height: 10%">Alisson Becker</td>
                                     <td class="text-center h2 align-middle">GK</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row" class="h1 text-center align-middle">6</th>
-                                    <td class="text-center h2"><img src="images/silva.png" alt="silva" style=" width: 10%; height: 10%">Thiago Silva</td>
+                                    <th scope="row" class="h1 text-center align-middle">4</th>
+                                    <td class="text-center h2"><img src="images/vandijk.png" alt="vandijk" style=" width: 10%; height: 10%">Virgil Van Dijk</td>
                                     <td class="text-center h2 align-middle">CB</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row" class="h1 text-center align-middle">19</th>
-                                    <td class="text-center h2"><img src="images/mount.png" alt="mount" style=" width: 10%; height: 10%">Mason Mount</td>
+                                    <th scope="row" class="h1 text-center align-middle">6</th>
+                                    <td class="text-center h2"><img src="images/thiago.png" alt="thiago" style=" width: 10%; height: 10%">Thiago Alcantara</td>
                                     <td class="text-center h2 align-middle">CM</td>
                                 </tr>
                                 <tr>
-                                    <th scope="row" class="h1 text-center align-middle">29</th>
-                                    <td class="text-center h2"><img src="images/havertz.png" alt="kai" style=" width: 10%; height: 10%">Kai Havertz</td>
-                                    <td class="text-center h2 align-middle">ST</td>
+                                    <th scope="row" class="h1 text-center align-middle">11</th>
+                                    <td class="text-center h2"><img src="images/salah.png" alt="salah" style=" width: 10%; height: 10%">Mohamed Salah</td>
+                                    <td class="text-center h2 align-middle">RW</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -136,5 +134,6 @@
 
         <img src="images/logo.png" alt="logo" style="position:absolute; width:4%; height:4%; right:0">
     </footer>
+
 </body>
 </html>
