--- a/chelsea.html
+++ b/chelsea.html
@@ -8,12 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>Premier League</title>
+    <script defer src="./js/clubs.js"></script>
 </head>
 <body class="text-white">
 
     <section>
-        <div class="trim"><img src="/images/background.jpeg" alt="Background" class="imtip"></div>
-        <img src="/images/logo.png" alt="Premier League Logo" id="premlogo">
+        <div class="trim"><img src="/images/background.jpeg" alt="Background" class="img-fluid imtip"></div>
+        <img src="/images/logo.png" alt="Premier League Logo" class="img-responsive premlogo">
     </section>
 
     <nav class="navbar-default justify-content-between text-center" style="background-color:rgb(139,0,139); font-size: 25px;">
@@ -35,7 +36,7 @@
         <a class="px-3" href="">Help</a>
 
     </nav>
-    <div class="p-1" style="background-image: url(/images/stamfordbridge.jpg); background-size: cover">
+    <div class="img-fluid p-1" style="background-image: url(/images/stamfordbridge.jpg); background-size: cover">
          <h1 class="clubheader d-inline"><img src="images/chelsea.png" alt="Chelsea" style="width: 20%; height: 15%" >Chelsea FC</h1>
 
 
