--- a/teams.html
+++ b/teams.html
@@ -15,7 +15,7 @@
     <title>Premier League</title>
     <section>
         <div class="trim"><img src="/images/background.jpeg" alt="Background" class="imtip"></div>
-        <img src="/images/logo.png" alt="Premier League Logo" id="premlogo">
+        <img src="/images/logo.png" alt="Premier League Logo" class="premlogo">
     </section>
 
     <nav class="navbar-default justify-content-between text-center" style="background-color:rgb(139,0,139); font-size: 25px;">
